--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPd9Q8YMTJucw+hcPxYDa/o",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPpyZDBuYuvjP59o9u9+0oD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -498,7 +499,7 @@
         "id": "nZ7tJjwtXtOP",
         "outputId": "8b97db6e-5c7e-4ac5-e96e-37f6d5d3da06"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +507,8 @@
           "text": [
             "INFO:     Will watch for changes in these directories: ['/content']\n",
             "INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)\n",
-            "INFO:     Started reloader process [837] using WatchFiles\n"
+            "INFO:     Started reloader process [837] using WatchFiles\n",
+            "INFO:     Stopping reloader process [837]\n"
           ]
         }
       ]
@@ -546,6 +548,44 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Possible docker option, just an idea\n",
+        "not tested\n",
+        "command shell commands"
+      ],
+      "metadata": {
+        "id": "vH7k0uzmxuY4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "docker build -t fastapi-app ."
+      ],
+      "metadata": {
+        "id": "SrNR3dabRRel"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "docker run -p 8000:8000 fastapi-app"
+      ],
+      "metadata": {
+        "id": "uBWBfPGBRXwk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "docker-compose up --build"
+      ],
+      "metadata": {
+        "id": "k4bQzzvVRbfP"
+      }
     }
   ]
 }
